- New weapon tdf tag size, defines the size of projectiles.
- New weapon tdf tag sizegrowth, defines how fast flame projectiles will grow in size.
- New weapon tdf tag AvoidFriendly, if set to 0 units will not try to avoid friendly units in their line of fire.
- New weapon tdf tag CollideFriendly, if set to 0 this weapon will not hit friendly units.
- edgeEffectivness added for weapons

- Added limited fuel settings for units (only work for aircrafts so far, need a good mechanism for refueling other stuff)
-  New fbi tag MaxFuel, max fuel in seconds that the unit can carry, default 0 = unlimited
-  New fbi tag RefuelTime, how long time it takes to fully refuel the unit, default 5
-  New fbi tag MinAirBasePower, minimum build power an airbase unit must have for the aircraft to land on it, default 0
-  New fbi tag WeaponFuelUsage<1-16>, how much fuel in seconds that firing the weapon takes from the owning unit, default 0
-  New fbi tag SeismicDistance, give the unit a seismic sensor for detecting movement through the ground.
-  New fbi tag SeismicSignature, The magnitude of seismic disturbance when this unit is moving, default sqrt(mass/100).
- New COB "get"/"set" constant: 75 MAX_SPEED get/sets the max speed of the unit (multiplied with 64k)

- New archive format (for map/mod development): *.sdd. It is a directory, but it is treated as an archive just like *.sdz and *.sd7.

0.72b1

- Bos/Cob script for units can now animate the death of the unit. Just have the Kill function return after a while instead of directly and return wreck level in return value instead of in function argument.
- Fixed the com dies, game ends exploit: sharing your com now kills you
- Fixed a bug causing clients not to quit when server quits
- Fixed crash bug normally resulting in dialog with "no rtti data"
- ".give" cheat command doesn't desync the game anymore
- Made "Team0() is no more" message customizable by modders (see XTA for an example).